--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+        input, textarea, select {
+            font-size: 16px !important;        /* QUAN TRỌNG NHẤT – dưới 16px iOS sẽ tự zoom */
+            -webkit-text-size-adjust: 100%;    /* Dự phòng */
+        }
+        .input-giftcode {
+            font-size: 16px !important;
+            padding: 14px;
+            text-align: center;
+        }
 body {
     font-family: 'Arial', sans-serif;
     background: #000;
